fixed font size and spacing issues

--- a/sass/_h5bp.scss
+++ b/sass/_h5bp.scss
@@ -8,8 +8,8 @@ textarea {
 }
 
 body {
-    font-size: 1em;
-    line-height: 1.4;
+    font-size: 12px;
+    line-height: 22px;
 }
 
 /*
