--- a/sass/_normalize.scss
+++ b/sass/_normalize.scss
@@ -215,7 +215,8 @@ mark {
  * Addresses margins set differently in IE6/7
  */
 
-p,
+// Doesn't fit with our theme (for paragraphs).
+//p,
 pre {
     /* Sets 1 unit of vertical rhythm on the top and bottom margin. */
     margin: rhythm(1) 0;
